# OpalineFM

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  README_ja.md  THIRD_PARTY_NOTICES.md  apply-midi-ui-reflection-v3.ps1
.codex/: backup_before_reset_20260705_093447.patch  backup_before_reset_20260705_093447.status.txt
.github/workflows/: ci.yml  windows-installers.yml
Source/App/: Dx21AppState.h  Dx21StateSerialization.h  Main.cpp  MainComponent.cpp  MainComponent.h  OpalineAppState.h  OpalineStateSerialization.h  OpalineVersion.h.in  OpalineVoiceLibraryXml.cpp  OpalineVoiceLibraryXml.h
Source/Console/: Main.cpp
Source/Engine/: ChipVoiceImport.cpp  ChipVoiceImport.h  Dx21ChipEnvelope.cpp  Dx21ChipEnvelope.h  Dx21Engine.cpp  Dx21Engine.h  Dx21Envelope.cpp  Dx21Envelope.h  Dx21NewEngine.h  Dx21PitchEnvelope.cpp  Dx21PitchEnvelope.h  Dx21Sysex.cpp  Dx21Sysex.h  Dx21Tables.cpp  Dx21Tables.h  Dx21Types.cpp  Dx21Types.h  Dx21Voice.cpp  Dx21Voice.h  Dx21VoiceLibrary.cpp  Dx21VoiceLibrary.h  OpalineChipEnvelope.cpp  OpalineChipEnvelope.h  OpalineEngine.cpp  OpalineEngine.h  OpalineEnvelope.cpp  OpalineEnvelope.h  OpalinePitchEnvelope.cpp  OpalinePitchEnvelope.h  OpalineSysex.cpp  OpalineSysex.h  OpalineTables.cpp  OpalineTables.h  OpalineTypes.cpp  OpalineTypes.h  OpalineVoice.cpp  OpalineVoice.h  OpalineVoiceLibrary.cpp  OpalineVoiceLibrary.h  RealtimeAudioRecorder.cpp  (+3 more)
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Tests/: EngineTests.cpp
Source/Tools/: GenerateDefaultFactoryLibrary.cpp  GenerateFactoryVariant.cpp  GenerateOriginalFactory.cpp  TuneFactoryBank.cpp
assets/: DX21_0.syx  DX21_2.syx  DX21_3.syx  DX21_LevelScale_Test.opalinevoice  DX21_ModLevelScale_LS00.opalinevoice  DX21_ModLevelScale_LS25.opalinevoice  DX21_ModLevelScale_LS50.opalinevoice  DX21_ModLevelScale_LS75.opalinevoice  DX21_ModLevelScale_LS99.opalinevoice  DX21_RateScale_RS0.opalinevoice  DX21_RateScale_RS1.opalinevoice  DX21_RateScale_RS2.opalinevoice  DX21_RateScale_RS3.opalinevoice  Deep Grand.opalinevoice  Pianobrass.opalinevoice  factory.opalinelibrary.xml  factory.syx  factory_1.syx  factory_curated.syx  factory_curated_2.syx  factory_original_v1.opalinelibrary.xml  factory_original_v1.syx  factory_variant_v1.opalinelibrary.xml  factory_variant_v1.syx
cmake/: OpalineVersion.cmake  increment_opaline_version.cmake
docs/: AUv3_IMPLEMENTATION_PLAN.md  DX21Native_ChipDerived_Revision_Spec.md  DX21_HARDWARE_INVESTIGATION.md  DX21_LEVEL_to_YM2151_TL_Spec.md  DX21_Native_VST3_実装チケット分解.md  DX21_Native_VST3_移植仕様書.md  DX21_Performance_Mode_Spec.md  DX21_Pitch_Envelope_Generator.md  DX21_SOUND_SPEC.md  ENGINE_NEW_OPM.md  FACTORY_VARIANT_PROVENANCE.md  FACTORY_VOICE_PROVENANCE.md  M5_VST3_初版完成_作業工程.md  OpalineFM_Spec.md  OpalineFM_Spec_ja.md  PrivacyPolicy_ja.md  WebDX21_DX21_SYX_Import_Spec.md  WebDX21_JS_Engine_Spec.md  WebDX21_LFO_SPEC.md  WebDX21_UI_Spec.md  YM2151_YM2612_VOICE_IMPORT_SPEC_ja.md
iOS/OpalineFMMobile/: README.md  project.yml
iOS/OpalineFMMobile/AUv3Extension/: AudioUnitViewController.swift  Info.plist  OpalineAUAudioUnit.h  OpalineAUAudioUnit.mm  OpalineFMAUv3Extension-Bridging-Header.h
iOS/OpalineFMMobile/OpalineFMMobile.xcodeproj/: project.pbxproj
iOS/OpalineFMMobile/OpalineFMMobile.xcodeproj/xcshareddata/xcschemes/: OpalineFMMobile.xcscheme
iOS/OpalineFMMobile/Sources/App/: MobileAudioEngine.swift  MobileMIDIInput.swift  MobileSynthModel.swift  OpalineFMMobileApp.swift
iOS/OpalineFMMobile/Sources/Native/: OpalineFMMobile-Bridging-Header.h  OpalineMobileEngineBridge.h  OpalineMobileEngineBridge.mm  OpalineMobileVoiceLibraryXML.h
iOS/OpalineFMMobile/Sources/Resources/: Info.plist
iOS/OpalineFMMobile/Sources/UI/: EditView.swift  LibraryView.swift  PlayView.swift  RootView.swift
iOS/OpalineFMMobile/Sources/UI/Components/: MobileKeyboardView.swift  WheelView.swift
installer/: OpalineFM-Standalone.iss  OpalineFM-VST3.iss
scripts/: build-engine-tests.ps1  build-macos-installers.sh  build-windows-installers.ps1  diagnose-build-env.ps1  play-dx21-levelscale.swift  run-ios-mobile-simulator.sh
